--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,19 +1,29 @@
-name: Python CI
+name: Django CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout do código
+        uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Run simple test
+      - name: Instalar dependências
         run: |
-          python -c "print('CI/CD funcionando!')"
+          python -m pip install --upgrade pip
+          pip install django
+
+      - name: Rodar teste simples
+        run: |
+          python -c "print('CI/CD Django funcionando corretamente!')"
